--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
+allow 107.189.3.11;
 allow 107.189.31.134;
 allow 107.189.31.225;
 allow 107.189.31.232;
@@ -490,7 +491,6 @@ allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
 allow 185.220.103.7;
-allow 185.220.103.8;
 allow 185.220.103.9;
 allow 185.222.66.188;
 allow 185.225.69.203;
@@ -675,7 +675,6 @@ allow 198.98.48.20;
 allow 198.98.48.33;
 allow 198.98.49.203;
 allow 198.98.50.199;
-allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.53.136;
 allow 198.98.54.49;
@@ -812,7 +811,6 @@ allow 200.25.27.112;
 allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.137.14.104;
-allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
@@ -991,7 +989,6 @@ allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:4ed:1:1:1:1;
-allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
 allow 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
@@ -1019,6 +1016,7 @@ allow 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
+allow 2605:6400:30:efb2::;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1142,7 +1140,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
-allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
@@ -1514,6 +1511,8 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
+allow 31.220.98.139;
+allow 34.207.50.198;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1523,10 +1522,10 @@ allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
 allow 37.252.255.135;
+allow 37.27.20.230;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 3.94.176.0;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1586,7 +1585,6 @@ allow 45.9.150.130;
 allow 45.92.1.74;
 allow 45.94.31.180;
 allow 45.95.169.184;
-allow 45.95.169.224;
 allow 45.95.169.225;
 allow 45.95.169.226;
 allow 45.95.169.227;
@@ -1716,7 +1714,6 @@ allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
-allow 85.204.116.211;
 allow 85.204.116.88;
 allow 85.215.76.62;
 allow 85.93.218.204;
