--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -240,6 +240,7 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
+set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
@@ -549,7 +550,6 @@ set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
-set_real_ip_from 189.147.152.101;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
@@ -672,6 +672,7 @@ set_real_ip_from 198.98.48.20;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.49.203;
 set_real_ip_from 198.98.50.199;
+set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
@@ -687,6 +688,7 @@ set_real_ip_from 199.195.253.247;
 set_real_ip_from 199.249.230.120;
 set_real_ip_from 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
+set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:220:3039:101:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
@@ -699,6 +701,7 @@ set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
 set_real_ip_from 2001:41d0:601:1100::108e;
+set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1100::205a;
 set_real_ip_from 2001:41d0:701:1100::38fc;
 set_real_ip_from 2001:41d0:701:1100::4434;
@@ -804,6 +807,7 @@ set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 200.25.27.112;
+set_real_ip_from 201.137.12.46;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.69.76.36;
 set_real_ip_from 204.137.14.104;
@@ -841,6 +845,7 @@ set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
+set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
@@ -849,6 +854,7 @@ set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.215.167;
 set_real_ip_from 217.12.221.131;
+set_real_ip_from 217.146.2.41;
 set_real_ip_from 217.160.88.146;
 set_real_ip_from 217.27.189.205;
 set_real_ip_from 23.129.64.130;
@@ -885,7 +891,6 @@ set_real_ip_from 23.129.64.220;
 set_real_ip_from 23.129.64.221;
 set_real_ip_from 23.129.64.222;
 set_real_ip_from 23.129.64.223;
-set_real_ip_from 23.129.64.224;
 set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.226;
 set_real_ip_from 23.129.64.227;
@@ -902,7 +907,6 @@ set_real_ip_from 23.137.249.240;
 set_real_ip_from 23.137.249.8;
 set_real_ip_from 23.137.250.34;
 set_real_ip_from 23.137.250.83;
-set_real_ip_from 23.145.40.101;
 set_real_ip_from 23.152.24.77;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
@@ -933,7 +937,6 @@ set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.101;
 set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
-set_real_ip_from 23.22.138.43;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -987,6 +990,7 @@ set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
+set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
@@ -1100,7 +1104,6 @@ set_real_ip_from 2620:18c:0:192::220;
 set_real_ip_from 2620:18c:0:192::221;
 set_real_ip_from 2620:18c:0:192::222;
 set_real_ip_from 2620:18c:0:192::223;
-set_real_ip_from 2620:18c:0:192::224;
 set_real_ip_from 2620:18c:0:192::225;
 set_real_ip_from 2620:18c:0:192::226;
 set_real_ip_from 2620:18c:0:192::227;
@@ -1117,6 +1120,7 @@ set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
 set_real_ip_from 2a00:11c0:1c:311::5;
+set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:3f::c0cc:80;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
@@ -1272,7 +1276,6 @@ set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
-set_real_ip_from 2a07:e04:3:10::1;
 set_real_ip_from 2a0a:3840:8078:24:0:504e:18cf:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
@@ -1640,6 +1643,7 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
+set_real_ip_from 52.72.27.39;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.39.25.229;
@@ -1650,6 +1654,7 @@ set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
 set_real_ip_from 5.42.80.235;
 set_real_ip_from 54.36.101.21;
+set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
@@ -1716,6 +1721,7 @@ set_real_ip_from 85.204.116.88;
 set_real_ip_from 85.215.76.62;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.194.13;
+set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.114.44;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.90;
@@ -1731,6 +1737,7 @@ set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.109.226;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
+set_real_ip_from 89.147.110.202;
 set_real_ip_from 89.147.110.214;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
@@ -1760,7 +1767,6 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
-set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.205.129.119;
 set_real_ip_from 92.205.163.226;
 set_real_ip_from 92.205.185.52;
@@ -1810,6 +1816,7 @@ set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
+set_real_ip_from 95.164.22.4;
 set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
