--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -52,6 +52,7 @@ allow 107.189.1.175;
 allow 107.189.11.80;
 allow 107.189.12.3;
 allow 107.189.13.180;
+allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
 allow 107.189.13.91;
@@ -143,8 +144,8 @@ allow 151.80.148.159;
 allow 152.53.35.204;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 155.4.102.252;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -187,6 +188,7 @@ allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.249.57.253;
 allow 173.255.255.215;
+allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -539,7 +541,6 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
-allow 185.70.8.45;
 allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -630,6 +631,7 @@ allow 193.189.100.201;
 allow 193.189.100.202;
 allow 193.189.100.203;
 allow 193.189.100.204;
+allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.182;
@@ -855,7 +857,6 @@ allow 217.12.215.167;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.160.88.146;
-allow 217.27.189.205;
 allow 23.129.64.130;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -878,6 +879,7 @@ allow 23.129.64.148;
 allow 23.129.64.149;
 allow 23.129.64.210;
 allow 23.129.64.211;
+allow 23.129.64.212;
 allow 23.129.64.213;
 allow 23.129.64.214;
 allow 23.129.64.215;
@@ -1090,6 +1092,7 @@ allow 2620:18c:0:192::148;
 allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::210;
 allow 2620:18c:0:192::211;
+allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
 allow 2620:18c:0:192::215;
@@ -1236,7 +1239,6 @@ allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
-allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1490,6 +1492,7 @@ allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
+allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
@@ -1514,6 +1517,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 34.235.93.78;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1623,8 +1627,8 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.21.193.128;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1687,6 +1691,7 @@ allow 78.142.18.219;
 allow 79.102.170.62;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
