--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -261,6 +261,7 @@ deny 2620:18c:0:192::148;
 deny 2620:18c:0:192::149;
 deny 2620:18c:0:192::210;
 deny 2620:18c:0:192::211;
+deny 2620:18c:0:192::212;
 deny 2620:18c:0:192::213;
 deny 2620:18c:0:192::214;
 deny 2620:18c:0:192::215;
@@ -406,7 +407,6 @@ deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
-deny 2a05:26c0:d1:12:acdc:feed:beef:66;
 deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
@@ -660,6 +660,7 @@ deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
 deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
+deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
