--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -261,6 +261,7 @@ set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:18c:0:192::210;
 set_real_ip_from 2620:18c:0:192::211;
+set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
 set_real_ip_from 2620:18c:0:192::214;
 set_real_ip_from 2620:18c:0:192::215;
@@ -406,7 +407,6 @@ set_real_ip_from 2a04:52c0:120:a13d::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
-set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:66;
 set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:99;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
@@ -660,6 +660,7 @@ set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
+set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
